[gd_scene load_steps=2 format=3 uid="uid://iaqenejaldyp"]

[ext_resource type="Script" path="res://lobby.gd" id="1_en4o0"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_en4o0")

[node name="LobbyList" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 36.0
offset_right = 132.0
offset_bottom = 76.0

[node name="Label" type="Label" parent="LobbyList"]
layout_mode = 2
text = "Connected to Lobby:"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 108.0
offset_top = 116.0
offset_right = 318.0
offset_bottom = 536.0

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.695503, 0.695503, 0.695503, 1)
text = "Press [Space] or [E]
or Menu to Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 116.0
offset_right = 561.0
offset_bottom = 536.0

[node name="Label" type="Label" parent="PanelContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.695503, 0.695503, 0.695503, 1)
text = "Press [Space] or [E]
or Menu to Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 596.0
offset_top = 116.0
offset_right = 806.0
offset_bottom = 536.0

[node name="Label" type="Label" parent="PanelContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.695503, 0.695503, 0.695503, 1)
text = "Press [Space] or [E]
or Menu to Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 839.0
offset_top = 116.0
offset_right = 1049.0
offset_bottom = 536.0

[node name="Label" type="Label" parent="PanelContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.695503, 0.695503, 0.695503, 1)
text = "Press [Space] or [E]
or Menu to Join"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerList" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -200.0
offset_right = 1064.0
offset_bottom = 200.0
grow_vertical = 2

[node name="OpenServer" type="Button" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 580.0
offset_right = 166.0
offset_bottom = 611.0
text = "Open Server"

[node name="JoinServer" type="Button" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 580.0
offset_right = 370.0
offset_bottom = 611.0
text = "Join Server"

[node name="ServerIP" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 377.0
offset_top = 580.0
offset_right = 537.0
offset_bottom = 611.0
text = "localhost"
placeholder_text = "0.0.0.0"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 580.0
offset_right = 1077.0
offset_bottom = 611.0
text = "Start Game"

[node name="LeaveServer" type="Button" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 580.0
offset_right = 744.0
offset_bottom = 611.0
disabled = true
text = "Leave Server"

[connection signal="pressed" from="OpenServer" to="." method="host_game"]
[connection signal="pressed" from="JoinServer" to="." method="join_game"]
[connection signal="pressed" from="StartGame" to="." method="start_game"]
[connection signal="pressed" from="LeaveServer" to="." method="leave_server"]
